layout bugfix for ccm.cloze.js

--- a/cloze/resources/default.css
+++ b/cloze/resources/default.css
@@ -134,6 +134,7 @@ button:disabled {
 
 .meter {
   height: 20px;
+  font-size: 14px;
   position: relative;
   background: #555;
   border-radius: 25px;
